sprint4/tests/error/02_string.py
# Unterminated string
# Parser Error: Unable to parse at line=3 col=3.
a: str = "
